--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ numpy = "^1.24.2"
 datetime = "^5.0"
 
 
+[tool.poetry.group.dev.dependencies]
+ipython = "^8.10.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
